--- a/high-fidelity-prototype/provider-prototype/provider-login.html
+++ b/high-fidelity-prototype/provider-prototype/provider-login.html
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="homepage.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="../homepage.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Services Available</a>
@@ -60,7 +60,7 @@
                 style="height: 50px; font-size: 1.1rem; border-width: 2px;">
         </div>
             <div class=" mb-3">
-                  <a href="homepage.html" class="btn btn-primary"
+                  <a href="provider-homepage.html" class="btn btn-primary"
                 style="background-color: brown; border-color: brown; color: white;">
                 Log In
             </a>
