--- a/high-fidelity-prototype/provider-prototype/provider-reply-reviews.html
+++ b/high-fidelity-prototype/provider-prototype/provider-reply-reviews.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(255, 123, 0);">
+       <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(255, 123, 0);">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Trotter</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -25,13 +25,16 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../homepage.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="provider-homepage.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Services Available</a>
+                        <a class="nav-link" href="provider-create-service.html">Create Service</a>
+                    </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="provider-reply-reviews.html">Reviews</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../homepage.html#contact-us">Contact Us</a>
+                        <a class="nav-link" href="provider-homepage.html#contact-us">Contact Us</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -39,17 +42,16 @@
                             Account
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end"> <!-- Aligns dropdown to the right -->
-                            <li><a class="dropdown-item" href="provider-create-service.html">Create
-                                    Service</a></li>
-                            <li><a class="dropdown-item" href="provider-cust-stats.html">Customer Statistics</a></li>
-                            <li><a class="dropdown-item" href="provider-reply-reviews.html">Reviews</a></li>
+                            <li><a class="dropdown-item" href="provider-profile.html">My Profile</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="provider-profile.html">My Profile</a></li>
+                                <li><a class="dropdown-item" href="../homepage.html">Log Out</a></li>
+                            
                         </ul>
                     </li>
                 </ul>
+
             </div>
         </div>
     </nav><br>
