--- a/high-fidelity-prototype/provider-prototype/provider-sign-up.html
+++ b/high-fidelity-prototype/provider-prototype/provider-sign-up.html
@@ -110,7 +110,7 @@
                     applicable)</label>
                 <input class="form-control" type="file" id="formFileMultiple" multiple>
             </div>
-            <a href="provider-profile.html" class="btn btn-primary"
+            <a href="provider-homepage.html" class="btn btn-primary"
                 style="background-color: rgb(255, 123, 0); border-color: orange;">
                 Sign Up
             </a>
