--- a/high-fidelity-prototype/provider-prototype/provider-create-service.html
+++ b/high-fidelity-prototype/provider-prototype/provider-create-service.html
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="provider-create-service.html">Create Service</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="provider-reply-reviews.html">Reviews</a>
+                        <a class="nav-link" href="provider-cust-stats.html">Statistics</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="provider-homepage.html#contact-us">Contact Us</a>
@@ -201,7 +201,7 @@
                     </div>
                 </div>
                 <div class="Home text-center">
-                    <a href="provider-homepage.html">
+                    <a href="provider-homepage.html#services">
                         <button class="btn btn-primary"
                             style="background-color: rgb(255, 123, 0); border-color: orange;">Create
                             Service</button>
