--- a/high-fidelity-prototype/provider-prototype/provider-reply-reviews.html
+++ b/high-fidelity-prototype/provider-prototype/provider-reply-reviews.html
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="provider-create-service.html">Create Service</a>
                     </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="provider-reply-reviews.html">Reviews</a>
+                        <a class="nav-link" href="provider-cust-stats.html">Statistics</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="provider-homepage.html#contact-us">Contact Us</a>
