--- a/high-fidelity-prototype/provider-prototype/provider-homepage.html
+++ b/high-fidelity-prototype/provider-prototype/provider-homepage.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="provider-create-service.html">Create Service</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="provider-reply-reviews.html">Reviews</a>
+                        <a class="nav-link" href="provider-cust-stats.html">Statistics</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="provider-homepage.html#contact-us">Contact Us</a>
@@ -107,7 +107,7 @@
     </div>
     <br><br>
 
-<div class="d-flex justify-content-center">
+<div id="services" class="d-flex justify-content-center">
   <div class="card w-75 mb-3">
     <div class="card-header">
       Your Services
