--- a/high-fidelity-prototype/provider-prototype/provider-login.html
+++ b/high-fidelity-prototype/provider-prototype/provider-login.html
@@ -56,8 +56,8 @@
             <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Username"
                 style="height: 50px; font-size: 1.1rem; border-width: 2px;">
 
-            <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Password"
-                style="height: 50px; font-size: 1.1rem; border-width: 2px;">
+           <input type="password" class="form-control" id="formGroupExampleInput2" placeholder="Password"
+       style="height: 50px; font-size: 1.1rem; border-width: 2px;">
         </div>
             <div class=" mb-3">
                   <a href="provider-homepage.html" class="btn btn-primary"
